<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_transaction_activity_layout"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->

...

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="Description"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toRightOf="@+id/photoView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <ToggleButton
...
            android:textOn="@string/toggle_plus"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photoView"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/editAmount" />

        <EditText
            android:id="@+id/editAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
...
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <EditText
            android:id="@+id/editDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            android:focusableInTouchMode="false"
...
            android:inputType="date"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editAmount" />

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
...
            app:layout_constraintLeft_toRightOf="@+id/photoView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editDescription"
            app:layout_constraintVertical_bias="0.428" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="Save"
            android:visibility="visible"
...
