<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="at.sw2017.financesolution.HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <!--<TextView
        android:id="@+id/fragment_transaction_textview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />-->

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/transaction_search_field"
        android:hint="Search"
        android:maxLines="1" />

    <ListView
        android:id="@+id/transaction_list_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@color/colorListViewDivider"
        android:dividerHeight="1dp"
        android:paddingLeft="2dp"></ListView>

</LinearLayout>
