...
            android:layout_marginTop="20dp"
            android:text="@string/balance_placeholder"
            android:textColor="@color/colorBalance"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/frag_home_balance_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/balance_text"
            android:textColor="@color/colorBalance"
            android:textSize="14sp" />
...
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/btn_add_transaction" />-->

        <ListView
            android:id="@+id/frag_home_transaction_listview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:cacheColorHint="@android:color/transparent"
...
